# sdbus-cpp-examples

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clang-format-files  generate.sh
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/src/avahi/: Makefile  avahi_server_client  cmake_install.cmake
_codeql_build_dir/src/bluez/: Makefile  bluez_client  cmake_install.cmake
_codeql_build_dir/src/geoclue2/: Makefile  cmake_install.cmake  geoclue2_client
_codeql_build_dir/src/hostname1/: Makefile  cmake_install.cmake  hostname1_client
_codeql_build_dir/src/locale1/: Makefile  cmake_install.cmake  locale1_client
_codeql_build_dir/src/login1/: Makefile  cmake_install.cmake  login1_manager_client
_codeql_build_dir/src/networkmanager/: Makefile  cmake_install.cmake  networkmanager_client
_codeql_build_dir/src/packagekit/: Makefile  cmake_install.cmake  packagekit_client
_codeql_build_dir/src/resolve1/: Makefile  cmake_install.cmake  resolve1_client
cmake/: GenerateProxies.cmake  compiler_clang.cmake  compiler_gnu.cmake  git.cmake  packaging.cmake
interfaces/: org.freedesktop.Avahi.Server.xml  org.freedesktop.Avahi.Server2.xml  org.freedesktop.GeoClue2.Client.Location.xml  org.freedesktop.UDisks2.Block.xml  org.freedesktop.UDisks2.Drive.xml  org.freedesktop.UDisks2.Filesystem.xml  org.freedesktop.UDisks2.NVMe.Namespace.xml  org.freedesktop.UDisks2.Partition.xml  org.freedesktop.UDisks2.PartitionTable.xml  org.freedesktop.UDisks2.Swapspace.xml  org.freedesktop.UPower.xml  org.freedesktop.hostname1.xml  org.freedesktop.locale1.xml  org.freedesktop.login1.Session.xml
interfaces/NetworkManager/: org.freedesktop.NetworkManager.AgentManager.xml  org.freedesktop.NetworkManager.IP4Config.xml  org.freedesktop.NetworkManager.IP6Config.xml  org.freedesktop.NetworkManager.Settings.xml  org.freedesktop.NetworkManager.xml
patches/: 0001-additional-interfaces.patch  0001-hid-rp-workarounds.patch
src/: utils.h
src/avahi/: CMakeLists.txt  avahi_server.h  avahi_server2.cc  avahi_server2.h  main.cc
src/bluez/: CMakeLists.txt  adapter1.h  battery1.h  battery_provider_manager1.h  bluez_client.cc  bluez_client.h  device1.h  gatt_characteristic1.h  gatt_descriptor1.h  gatt_manager1.h  gatt_service1.h  hexdump.hpp  hid_error.h  hidraw.hpp  input1.h  le_advertising_manager1.h  main.cc  media1.h  network_server1.h  udev_monitor.hpp
src/bluez/horipad_steam/: 99-horipad-stream.rules  CMakeLists.txt  README.md  horipad_steam.cc  horipad_steam.h  horipad_stream_01ab_0196.h  input_reader.cc  input_reader.h  main.cc
src/bluez/ps5_dual_sense/: CMakeLists.txt  device1.h  dual_sense.cc  dual_sense.h  dual_sense_0ce6.h  hidraw.hpp  input_reader.cc  input_reader.h  main.cc  report_parser.hpp  udev_monitor.hpp  vendor.hpp  vendor1.hpp
src/bluez/xbox_controller/: 99-xbox-controller.rules  CMakeLists.txt  README.md  hidraw.hpp  input_reader.cc  input_reader.h  input_reader.hpp  main.cc  udev_monitor.hpp  vendor.hpp  xbox_controller.cc  xbox_controller.h  xbox_controller_02fd.h
src/connman/: CMakeLists.txt  connman_client.cc  connman_client.h  main.cc
src/flatpak/: CMakeLists.txt  flatpak_system_helper_client.cc  flatpak_system_helper_client.h  main.cc
src/fwupd/: CMakeLists.txt  fwupd_client.cc  fwupd_client.h  main.cc
src/geoclue2/: CMakeLists.txt  geoclue2_client.h  geoclue2_location.h  geoclue2_manager.cc  geoclue2_manager.h  main.cc
src/hostname1/: CMakeLists.txt  hostname1_client.cc  hostname1_client.h  main.cc
src/locale1/: CMakeLists.txt  locale1_client.cc  locale1_client.h  main.cc
src/login1/: CMakeLists.txt  login1_manager_client.cc  login1_manager_client.h  login1_seat.h  login1_session.h  login1_user.h  main.cc
src/network1/: CMakeLists.txt  main.cc  network1_client.cc  network1_client.h
src/networkmanager/: CMakeLists.txt  main.cc  networkmanager_client.cc  networkmanager_client.h
src/packagekit/: CMakeLists.txt  main.cc  packagekit_client.cc  packagekit_client.h  packagekit_transaction.cc  packagekit_transaction.h
src/proxy/: Adapter1_proxy.h  AgentManager1_proxy.h  AvahiServer2_proxy.h  AvahiServer_proxy.h  Device1_proxy.h  GeoClue2ClientLocation_proxy.h  GeoClue2Client_proxy.h  GeoClue2Manager_proxy.h  Hostname1_proxy.h  Locale1_proxy.h  Login1Manager_proxy.h  Login1Seat_proxy.h  Login1Session_proxy.h  Login1User_proxy.h  Resolve1Link_proxy.h  Resolve1Manager_proxy.h  Timedate1_proxy.h  UDisks2Block_proxy.h  UDisks2Drive_proxy.h  UDisks2Filesystem_proxy.h  UDisks2ManagerNvme_proxy.h  UDisks2Manager_proxy.h  UDisks2NvmeController_proxy.h  UDisks2NvmeNamespace_proxy.h  UDisks2PartitionTable_proxy.h  UDisks2Partition_proxy.h  UDisks2Swapspace_proxy.h  UPowerDisplayDevice_proxy.h  UPower_proxy.h
src/realtimekit1/: CMakeLists.txt  main.cc  realtimekit1_manager_client.cc  realtimekit1_manager_client.h
src/resolve1/: CMakeLists.txt  main.cc  resolve1_manager.cc  resolve1_manager.h
src/systemd1/: CMakeLists.txt  main.cc  systemd1_manager_client.cc  systemd1_manager_client.h
src/timedate1/: CMakeLists.txt  main.cc  timedate1_client.cc  timedate1_client.h
src/timesync1/: CMakeLists.txt  main.cc  timesync1_manager_client.cc  timesync1_manager_client.h
src/udisks2/: CMakeLists.txt  README.md  main.cc  udisks2_block.h  udisks2_drive.h  udisks2_filesystem.h  udisks2_manager.cc  udisks2_manager.h  udisks2_manager_nvme.h  udisks2_monitor_daemon.cc  udisks2_monitor_daemon.cpp  udisks2_nvme_controller.h  udisks2_nvme_namespace.h  udisks2_partition.h  udisks2_partition_table.h  udisks2_swapspace.h
src/upower/: CMakeLists.txt  main.cc  upower_client.cc  upower_client.h  upower_display_device.cc  upower_display_device.h
src/utils/: CMakeLists.txt  event_loop.cc  event_loop.h  event_loop_test.cc  logging.h  resource_limits.h  signal_handler.h  signal_source.h  sys.h  sys_test.cc  unique_fd.h  utils.cc  utils.h
src/wpa_supplicant/: CMakeLists.txt  main.cc  wpa_supplicant1_client.cc  wpa_supplicant1_client.h
(+150 files in other folders)
